Tests/Modules/Error/InHandler/.build/throwwithbadhandler.pr
{
  "name": "ThrowWithBadHandler",
  "description": "Calls ThrowOriginal; if it throws, calls BadHandler as the error handler.",
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "call ThrowOriginal, on error call BadHandler",
      "lineNumber": 3,
      "indent": 0,
      "comment": "calls a goal that throws, handler also throws",
      "actions": [
        {
          "module": "goal",
          "action": "call",
          "parameters": [
            {
              "name": "GoalName",
              "value": {
                "name": "ThrowOriginal"
              },
              "type": "goal.call"
            },
            {
              "name": "Actor",
              "value": "this",
              "type": "actor(user|service|system)"
            }
          ],
          "defaults": null,
          "modifiers": [
            {
              "module": "error",
              "action": "handle",
              "parameters": [
                {
                  "name": "Actions",
                  "value": [
                    {
                      "module": "goal",
                      "action": "call",
                      "parameters": [
                        {
                          "name": "GoalName",
                          "value": {
                            "Name": "BadHandler"
                          },
                          "type": "goal.call"
                        }
                      ],
                      "defaults": null,
                      "modifiers": []
                    }
                  ],
                  "type": "list<action>"
                }
              ],
              "defaults": null,
              "modifiers": []
            }
          ]
        }
      ],
      "intent": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/ThrowWithBadHandler.goal",
  "prPath": "/.build/throwwithbadhandler.pr",
  "hash": "010dce8d9abce373be533dc95dd11a5dabefdaf8f05787372c28dd8580f1cee7",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}